# manycore_parser

./: Cargo.toml  README.md  VisualiserOutput0.xml
src/: borders.rs  channels.rs  configurable_attributes.rs  cores.rs  error.rs  fifos.rs  flatten_deserialize.rs  graph.rs  info.rs  lib-old.rs  lib.rs  main.rs  router.rs  routing.rs  sink_source.rs  tests.rs  threaded_deser.rs  utils.rs
src/borders/: sink.rs  source.rs
src/tests/: lib.rs  routing.rs
src/utils/: attrs.rs  btree.rs
tests/: Validation0.xml  Validation1.xml  VisualiserOutput0.xml  VisualiserOutput1.xml  serialized.xml
