[package]
name = "manycore_parser"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
