[package]
name = "manycore_parser"
version = "0.5.2"
edition = "2021"
authors = ["Giuseppe Barillari"]
license = "BSD-3-Clause-No-Military-License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
manycore_utils = { git = "https://github.com/joe2k01/manycore_utils.git", version = "0.1.0" }
quick-xml = { git = "https://github.com/tafia/quick-xml.git", version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"
